force-app/main/default/objects/Subscription_Category__mdt/Subscription_Category__mdt.object-meta.xml
<CustomObject>
    <description>This object is used to store the Category and the related list of comma separated Subscription Preference picklist values available on Leads and Contacts. This metadata determines which Subscription Values are added or removed where one value within a Category is added or removed, then all Subscription Values are added or removed in the Subscription Preferences field. If Is Opt Out = True for the Category, all other Subscription Values in the Subscription Preferences field on Lead or Contact will be removed (only one record should be marked as True). Each Category is used in the Subscription Target Systems metadata to determine whether the Category needs to be sent to a targeted system.</description>
    <label>Subscription Category</label>
    <pluralLabel>Subscription Categories</pluralLabel>
</CustomObject>