force-app/main/default/objects/Subscription_Category__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Stores the subscription Category that will mapped to single or multiple subscription picklist values. Each Category is used in the Subscription Target Systems metadata to determine whether the Category needs to be sent to a targeted system.</description>
    <inlineHelpText>Stores the subscription Category that will mapped to single or multiple subscription picklist values. Each Category is used in the Subscription Target Systems metadata to determine whether the Category needs to be sent to a targeted system.</inlineHelpText>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>