force-app/main/default/objects/Subscription_Category__mdt/fields/Integration_Field__c.field-meta.xml
<CustomField>
    <fullName>Integration_Field__c</fullName>
    <description>Name of the field that will be used in the JSON payload request that is sent to Integration system (Mulesoft).</description>
    <inlineHelpText>Name of the field that will be used in the JSON payload request that is sent to Integration system (Mulesoft).</inlineHelpText>
    <label>Integration Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>