force-app/main/default/objects/Subscription_Category__mdt/fields/Is_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Is_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the category is opt out. If opt out value is selected as the subscription preference on Contact or Lead, we ignore all other selections and keep only the opt out value. Only one value should be marked as Is Opt Out</description>
    <inlineHelpText>Indicates if the category is opt out. If opt out value is selected as the subscription preference on Contact or Lead, we ignore all other selections and keep only the opt out value. Only one value should be marked as Is Opt Out</inlineHelpText>
    <label>Is Opt Out</label>
    <type>Checkbox</type>
</CustomField>