force-app/main/default/objects/Subscription_Category__mdt/fields/Subscription_Values__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Values__c</fullName>
    <description>Comma separated list of subscription values mapped to each category. Each value in this field should match with values from Subscription Preferences field on the Lead or Contact</description>
    <inlineHelpText>Comma separated list of subscription values mapped to each category. Each value in this field should match with values from Subscription Preferences field on the Lead or Contact</inlineHelpText>
    <label>Subscription Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>